2010-07-08 mohamadou
* revert the last commit, setting permission on this state breaks some sites security.

2010-06-08 mohamadou
* set permission on embedded state to allow assignee and assignor access the document.

2010-06-01 mayoro
* add delete transtion from embedded because needed in erp5_egov
* allow owner to delete documents in embedded state


2010-03-24 nicolas
* Change duration cache of dms_cache_factory to avoid keeping converted values indefinitely. New duration is 6 month.

2010-03-12 ivan
* Add conversion_failed state (indicating an external OOOd failure) and needed transitions.

2010-02-12 ivan
* Add new interaction that will add contributor (logged in user) to edited document

2009-11-12 Kazuhiko
* remove 'similar' base category because it is already included in erp5_web.

2009-10-16 rafael
* Update for the changes of new portal types of portal types.

2009-09-23 Kazuhiko
* add ERP5-integrated filebrowser for FCKeditor's image / link edit dialogue.

2009-09-11 yusei
* Fix Image Module action and make view action the first priority.

2009-09-08 Nicolas
* update content_md5 when upload a new file

2009-08-25 Kazuhiko
* add File_viewEditor for text/* documents.

2009-08-21 ivan
* Use full text search to find related documents (i.e. referencing documents)

2009-08-12 Kazuhiko
* use iframe_content in OOoDocument_viewAsWeb for Drawing and Presentation to have better paginations.
* use OOoDocument_viewAsWeb instead of Drawing_viewAsWeb in all preview for Drawing and Presentation.

2009-07-07 nicolas
* add dms_cache_factory to store conversion values in persisent storage like flare
To enable it, please update your DMS Preference.
(Preferred Conversion Cache)

2009-07-03 romain
* Revert latest proxy field library simplification, as the design was not finalized.

2009-07-03 jm
* Remove 'edit' transition on processing_status_workflow and reuse edit_workflow.

2009-05-15 yusei
* Add my_editor_field to Base_viewDMSFieldLibrary.

2009-05-08 yusei